@@ -1682,9 +1682,11 @@ bool utp_socket_impl::send_pkt(int flags)
 			stack_alloced = true;
 #endif
 			TORRENT_ASSERT(force);
-			// TODO: 3 this alloca() statement won't necessarily produce
-			// correctly aligned memory. do something about that
-			p = (packet*)TORRENT_ALLOCA(char, sizeof(packet) + packet_size);
+			// this alloca() statement won't necessarily produce
+			// correctly aligned memory. That's why we ask for 7 more bytes
+			// and adjust our pointer to be aligned later
+			p = (packet*)TORRENT_ALLOCA(char, sizeof(packet) + packet_size + 7);
+			p = (packet*)align_pointer(p);
 			UTP_LOGV("%8p: allocating %d bytes on the stack\n", this, packet_size);
 			p->allocated = packet_size;
 		}
